--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "postcss": "^8.5.6",
     "prettier": "^3.7.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "sass": "^1.69.5",
+    "sass-embedded": "^1.96.0",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
