--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 # MongoDB Atlas Connection
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
+# Format: mongodb+srv://USERNAME:PASSWORD@CLUSTER.mongodb.net/DATABASE?retryWrites=true&w=majority
+MONGODB_URI=your_mongodb_connection_string_here
 
 # Server Configuration
 PORT=5000
