--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.27.1",
     "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
