Add Schedule module with automatic time tracking and Excel export
Features:
- Full schedule matrix view with employee rows and date columns
- Automatic work hours calculation (Total, Overtime, Weekend, Holiday)
- Estonian public holidays 2026 integration
- Excel/CSV export functionality for accountant
- Sticky columns (employee + statistics) for easy viewing
- Color-coded cells: green (shifts), yellow (vacation), red (sick leave)
- Holiday highlights in red background
- Complete i18n support (FI, RU, EN, ET)
- Role-based filtering
- Click-to-assign shift functionality
- Backend API with MongoDB integration

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "prod": "npm run build && npm start",
-    "seed": "ts-node-dev src/config/seed.ts"
+    "seed": "ts-node-dev src/config/seed.ts",
+    "seed:schedule": "ts-node-dev src/config/seedSchedule.ts"
   },
   "keywords": [
     "express",
