security: Fix .gitignore and add git hooks protection

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,13 @@ build
 
 # Environment variables
 .env
+.env.*
 .env.local
 .env.*.local
 *.env
+.env.production
+.env.development
+.env.staging
 
 # Editor directories and files
 .vscode/*
