--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview",
     "deploy:frontend": "powershell -ExecutionPolicy Bypass -File .\\deploy-frontend.ps1",
     "deploy:backend": "powershell -ExecutionPolicy Bypass -File .\\deploy-backend.ps1",
-    "deploy:all": "powershell -ExecutionPolicy Bypass -File .\\deploy-all.ps1"
+    "deploy:all": "powershell -ExecutionPolicy Bypass -File .\\deploy-all.ps1",
+    "prepare": "husky install",
+    "check-secrets": "powershell -ExecutionPolicy Bypass -File .\\scan-secrets.ps1",
+    "precommit": "node .husky/pre-commit"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -36,6 +39,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^8.0.3",
     "sass": "^1.97.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
