--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
