security: protect AI context file from public repo
- Renamed COPY_ME_FOR_AI.txt  AI_CONTEXT.local
- Added AI_CONTEXT.local to .gitignore (commercial secret)
- Created AI_CONTEXT.example template for others
- File contains internal methodology and confidential info

Why: Public repo should not expose internal work processes

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,12 @@ build
 .env.development
 .env.staging
 
+# AI context files (internal use only - commercial secret!)
+AI_CONTEXT.local
+COPY_ME_FOR_AI.txt
+*.ai-context
+*AI_CONTEXT*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
