fix: allow AI_CONTEXT.example in git
- Changed pattern from *AI_CONTEXT* to specific files
- Added exception for .example file (!AI_CONTEXT.example)
- Example file is safe for public repo

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ build
 AI_CONTEXT.local
 COPY_ME_FOR_AI.txt
 *.ai-context
-*AI_CONTEXT*
+# But allow example files
+!AI_CONTEXT.example
 
 # Editor directories and files
 .vscode/*
