security: protect deployment infrastructure details
REMOVED from Git (confidential info):
- DEPLOYMENT_CONFIG.md (IP, SSH, server paths)
- DEPLOYMENT_SUCCESS.md (infrastructure details)
- AI_CHEATSHEET.md (internal methodology)
- AI_CONTEXT.md (deployment commands)
- DEPLOYMENT.md (full deployment config)

ADDED to .gitignore:
- DEPLOYMENT.local (full config - local only)
- All deployment MD files

CREATED:
- DEPLOYMENT.local (full details, not in Git)
- DEPLOYMENT_GUIDE.md (public template without sensitive data)

Why: Public repo should not expose:
- Server IP addresses
- SSH access details
- Container names
- Directory paths
- Internal infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,15 @@ COPY_ME_FOR_AI.txt
 # But allow example files
 !AI_CONTEXT.example
 
+# Deployment configuration (confidential infrastructure info!)
+DEPLOYMENT.local
+DEPLOYMENT_CONFIG.md
+DEPLOYMENT_SUCCESS.md
+AI_CHEATSHEET.md
+AI_CONTEXT.md
+DEPLOYMENT.md
+*.deployment
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
